test/error/sema/fn-arg-type-mismatch.dsk
func f(x: int) -> void
    return
end

f("hello")
